# aeamcp

./: .gitignore  ASCII_TRANSFORMATION_COMPLETE.md  AUDIT_SUMMARY.md  Anchor.toml  COMPACT_CARDS_AND_DETAILED_PAGES_COMPLETE.md  Cargo.toml  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DOS_STATUS_BAR_IMPLEMENTATION.md  Dockerfile  ONBOARDING_CONTENT_SPECIFICATIONS.md  ONCHAIN_DATA_INTEGRATION_COMPLETE.md  ONCHAIN_DATA_INTEGRATION_IMPLEMENTATION_PLAN.md  ONCHAIN_DATA_INTEGRATION_PLAN.md  PRESALERS.md  PWA_IMPLEMENTATION_COMPLETE.md  README.md  RETRO_STATUS_BAR_IMPLEMENTATION.md  SOLANA_PROGRAMS_SECURITY_AUDIT.md  TEST_PLAN.md  ULTRA_COMPACT_CARD_SYSTEM.md  deploy-devnet-simple.sh  deployment-info-devnet-final.json  deployment-info-devnet.json  deployment-simulation.json  docs.html  draft.rs  fixed_hljs_documentation.md  frontend-dependencies.txt  index.html  integration_documentation.md  package-lock.json  package.json  refs.bib  research_draft_part1.md  research_draft_part10.md  research_draft_part11.md  research_draft_part12.md  research_draft_part13.md  research_draft_part14.md  (+10 more)
.github/: copilot-instructions.md
app/: layout.tsx  page.tsx
backend/: .env.example  Dockerfile  README.md  docker-compose.yml  package.json  quick-start.sh  tsconfig.json
cpp_sdk/: .gitignore  CMakeLists.txt  README.md
cpp_sdk/build-valgrind/: build.ninja
cpp_sdk/cmake/: aireg++Config.cmake.in
cpp_sdk/docs/: C_SDK_INTEGRATION.md  Doxyfile  TROUBLESHOOTING.md  USAGE_GUIDE.md
cpp_sdk/examples/: CMakeLists.txt  agent_operations.cpp  basic_usage.cpp  idl_generation.cpp  mcp_operations.cpp  payment_flows.cpp
cpp_sdk/include/aireg++/: agent.hpp  aireg++.hpp  c_sdk_bridge.hpp  client.hpp  common.hpp  idl.hpp  mcp.hpp  payments.hpp
cpp_sdk/src/: aireg++.cpp  c_sdk_impl.cpp  stubs.cpp
cpp_sdk/tests/: CMakeLists.txt  test_agent.cpp  test_base58.cpp  test_c_sdk_bridge.cpp  test_client.cpp  test_common.cpp  test_idl.cpp  test_integration.cpp  test_main.cpp  test_mcp.cpp  test_payments.cpp  test_url_validation.cpp
docs/: ASCII_TRANSFORMATION_PROGRESS.md  Agentic Economy, Memecoin Capital Markets_.md  COMPREHENSIVE_DASHBOARD_ARCHITECTURE_PLAN.md  COMPREHENSIVE_SOLANA_RUST_SECURITY_AUDIT_2025.md  COMPREHENSIVE_SOLANA_SECURITY_AUDIT_2025_UPDATED.md  CROSS_CHAIN_BRIDGE_ARCHITECTURE.md  C_SDK_IMPLEMENTATION_GUIDELINES.md  DASHBOARD_IMPLEMENTATION_ROADMAP.md  DEPLOYMENT_AND_TESTING_GUIDE.md  DEPLOYMENT_SUCCESS.md  DOS_STATUS_BAR_DEMO.html  DUAL_TOKENOMICS.md  DYNAMIC_ONBOARDING_IMPLEMENTATION_COMPLETE.md  DYNAMIC_ONBOARDING_IMPLEMENTATION_PLAN.md  GITHUB_ISSUES_BREAKDOWN.md  GIT_REGISTRATION_ARCHITECTURE.md  GIT_REGISTRATION_GITHUB_ISSUES.md  GO_SDK_IMPLEMENTATION_GUIDELINES.md  GO_SDK_IMPLEMENTATION_SUMMARY.md  GO_SDK_QUICKSTART.md  GRAYSCALE_ASCII_TRANSFORMATION_PREVIEW.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  ONBOARDING_I18N_SPECIFICATIONS.md  PHASE1_DEPLOYMENT_STATUS.md  PHASE1_EXECUTION_PLAN.md  PHASE1_IMPLEMENTATION_COMPLETE.md  PHASE1_IMPLEMENTATION_SUMMARY.md  PHASE2_A2AMPL_DEPLOYMENT_PLAN.md  PHASE2_DEPLOYMENT_PLAN.md  PHASE2_DEPLOYMENT_STATUS_EXISTING_TOKEN.md  PYTHON_SDK_IMPLEMENTATION_GUIDELINES.md  PYTHON_SDK_QUICK_START.md  QUICK_START_SOLANA_AUTH.md  REGISTRY_MODIFICATION_REQUIREMENTS.md  RETRO_STATUS_BAR_DEMO.html  SDK_BURNDOWN_TRACKER.md  (+29 more)
programs/access-control/: CPI_OPTIMIZATION.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  SECURITY_AUDIT.md
programs/access-control/src/: error.rs  instructions.rs  lib.rs  lib_minimal.rs  processor.rs  security.rs  state.rs  utils.rs  validation.rs
programs/access-control/tests/: edge_cases.rs
programs/agent-registry/: Cargo.toml
programs/agent-registry/src/: events.rs  instruction.rs  lib.rs  processor.rs  state.rs  validation.rs
programs/agent-registry/src/_tests_disabled/: authority_verification_test.rs  security_integration_test.rs  token_integration_test.rs
programs/agent-registry/src/tests/: authority_verification_test.rs  mod.rs
programs/common/: Cargo.toml
programs/common/src/: authority.rs  constants.rs  error.rs  lib.rs  serialization.rs  token_utils.rs  utils.rs
programs/mcp-server-registry/: Cargo.toml
programs/mcp-server-registry/src/: events.rs  instruction.rs  lib.rs  processor.rs  state.rs  validation.rs
programs/mcp-server-registry/src/tests/: mod.rs  security_integration_test.rs  token_integration_test.rs
python/: .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  conftest.py  integration-report.xml  mypy.ini  pyproject.toml  pytest.ini  pytest_plugin_compat.py  pytest_xprocess_compat.py  run_tests.py
python/solana_ai_registries/: __init__.py  agent.py  client.py  constants.py  exceptions.py  idl.py  mcp.py  payments.py  types.py
python/solana_ai_registries/idl_files/: __init__.py  agent_registry.json  mcp_server_registry.json
python/tests/: conftest.py  test_imports.py
python/tests/integration/: __init__.py  test_devnet.py
python/tests/unit/: __init__.py  test_additional_coverage.py  test_additional_coverage_boost.py  test_agent.py  test_agent.py.broken  test_client.py  test_comprehensive_coverage.py  test_comprehensive_coverage.py.broken  test_constants.py  test_core_coverage.py  test_coverage_boost.py  test_coverage_booster.py  test_exceptions.py  test_final_coverage_push.py  test_final_optimized.py  test_final_push.py  test_focused_coverage.py  test_high_impact_coverage.py.broken  test_idl.py  test_idl.py.broken2  test_idl.py.broken3  test_idl.py.broken4  test_imports.py  test_interfaces_focused.py  test_laser_focus.py  test_mcp.py  test_mcp.py.broken  test_mcp.py.broken2  test_minimal_coverage.py  test_payments.py  test_simple_coverage.py  test_simple_coverage_push.py  test_targeted_coverage.py  test_targeted_coverage.py.broken  test_types.py  test_ultra_efficient_coverage.py  test_ultra_efficient_coverage.py.broken
rust/: Cargo.toml  README.md
rust/src/: client.rs  errors.rs  idl.rs  lib.rs
rust/src/agent/: mod.rs
rust/src/mcp/: mod.rs
rust/src/payments/: common.rs  mod.rs  prepay.rs  pyg.rs  stream.rs
rust/tests/: agent_flow.rs  integration.rs  payment_pyg.rs
(+316 files in other folders)
