[workspace]
resolver = "2"
members = [
    "programs/svmai-token",
    "programs/agent-registry",
    "programs/mcp-server-registry",
    "programs/common"
]

[workspace.dependencies]
solana-program = "1.18"
borsh = "0.10"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
getrandom = { version = "0.2", features = ["js"] }

[workspace.dependencies.solana-program-test]
version = "1.18"

[workspace.dependencies.solana-sdk]
version = "1.18"


[profile.release]
overflow-checks = true
