[package]
name = "solana-a2a"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
test-bpf = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
solana-program = { workspace = true }
borsh = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
getrandom = { workspace = true }
aeamcp-common = { path = "../common" }
shank = "0.4.3"
anchor-lang = "0.29.0"
anchor-spl = { version = "0.29.0", default-features = false, features = ["token"] }
spl-token = { version = "=4.0.0", default-features = false }

[dev-dependencies]
solana-program-test = { workspace = true }
solana-sdk = { workspace = true }