[package]
name = "aeamcp-common"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = { workspace = true }
borsh = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
solana-program-test = { workspace = true }
solana-sdk = { workspace = true }