[package]
name = "solana-mcp"
version = "0.1.0"
description = "MCP Server Registry program for Solana AI Registries"
edition = "2021"
license = "MIT"
repository = "https://github.com/openSVM/aeamcp"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
test-bpf = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
solana-program = { workspace = true }
borsh = "0.10"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
getrandom = { workspace = true }
shank = "0.4.3"
anchor-lang = "0.29.0"
anchor-spl = { version = "0.29.0", default-features = false, features = ["token"] }
spl-token = { version = "=4.0.0", default-features = false }

# Local dependencies
aeamcp-common = { path = "../common" }

[dev-dependencies]
solana-program-test = { workspace = true }
solana-sdk = { workspace = true }
tokio = { version = "1.0", features = ["macros"] }